--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Rock Paper Scissors</title>
-</head>
+    <title>Rock Paper Scissors</title></head>
 <body>
-    <header class="header"><h1>Rock Paper Scissors!</h1>
+    <header class="header"><h1>Rock Paper Scissors! <i class="fa-regular fa-hand-back-fist" ></i> 
+        <i class="fa-regular fa-hand"></i> <i class="fa-regular fa-hand-scissors"></i></h1>
     </header>
-    <main>
+    <main id="main_area">
         <div id="game_container">
             <div id="results">
                 <div id="player_choice">You Chose</div>
@@ -21,16 +21,31 @@
                 <span id="cpu_score"></span>
             </div>
             <div id="buttons">
-                <button id="rock">Rock</button>
-                <button id="paper">Paper</button>
-                <button id="scissors">Scissors</button>
+                <button id="rock">Rock <i class="fa-regular fa-hand-back-fist" ></i> </button>
+                <button id="paper">Paper <i class="fa-regular fa-hand"></i></button>
+                <button id="scissors">Scissors <i class="fa-regular fa-hand-scissors"></i></button>
             </div>
             <button id="restart">play Again?</button>
         </div>
     </main>
-    <footer>
+    <footer class="footer">    
+        <ul>
+            <li><a href="https://en.wikipedia.org/wiki/Rock_paper_scissors" rel="noopener" 
+                aria-label="Rock paper scissors wikipedia page"
+                target="_blank"><i class="fa-brands fa-wikipedia-w fa-lg"></i></a>
+            </li>
+            <li>
+                <a href="https://wrpsa.com/" rel="noopener" aria-label="world rock paper scissors association web page"
+                target="_blank"><i class="fa-light fa-globe fa-lg"></i></a>
+            </li>
+            <li>
+                <a href="https://www.wikihow.com/Play-Rock,-Paper,-Scissors" target="_blank" rel="noopener" 
+                aria-label="how to play rock paper scissors"><i class="fa-solid fa-hand-back-fist fa-lg"></i></a>
+           </li>
+        </ul>
 
     </footer>
 <script src="assets/js/script.js"></script> 
+<script src="https://kit.fontawesome.com/b75fe46682.js" crossorigin="anonymous"></script>
 </body>
 </html>
