style results section and heading

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <main id="main_area">
         <div id="game_container">
             <div id="results">
-                <div id="player_choice">You Chose</div>
-                <div id="cpu_choice">Computer chose</div>
+                
+                <div id="player_choice"></div>
+                
+                <div id="cpu_choice"></div>
             </div>
             <div id="scores">
                 <span id="player_score"></span>
