--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <span id="cpu_score"></span>
             </div>
             <div id="buttons">
-                <button id="rock">Rock <i class="fa-regular fa-hand-back-fist" ></i> </button>
-                <button id="paper">Paper <i class="fa-regular fa-hand"></i></button>
-                <button id="scissors">Scissors <i class="fa-regular fa-hand-scissors"></i></button>
+                <button id="rock">Rock <br> <i class="fa-regular fa-hand-back-fist" ></i> </button>
+                <button id="paper">Paper <br><i class="fa-regular fa-hand"></i></button>
+                <button id="scissors">Scissors <br><i class="fa-regular fa-hand-scissors"></i></button>
             </div>
             <button id="restart">play Again?</button>
         </div>
