--- a/index.html
+++ b/index.html
@@ -27,26 +27,13 @@
                 <button id="paper">Paper <br><i class="fa-regular fa-hand"></i></button>
                 <button id="scissors">Scissors <br><i class="fa-regular fa-hand-scissors"></i></button>
             </div>
-            <button id="restart">play Again?</button>
+            <div id="restart">
+                <button>play Again?</button>
+            </div>
+            
         </div>
     </main>
-    <footer class="footer">    
-        <ul>
-            <li><a href="https://en.wikipedia.org/wiki/Rock_paper_scissors" rel="noopener" 
-                aria-label="Rock paper scissors wikipedia page"
-                target="_blank"><i class="fa-brands fa-wikipedia-w fa-lg"></i></a>
-            </li>
-            <li>
-                <a href="https://wrpsa.com/" rel="noopener" aria-label="world rock paper scissors association web page"
-                target="_blank"><i class="fa-light fa-globe fa-lg"></i></a>
-            </li>
-            <li>
-                <a href="https://www.wikihow.com/Play-Rock,-Paper,-Scissors" target="_blank" rel="noopener" 
-                aria-label="how to play rock paper scissors"><i class="fa-solid fa-hand-back-fist fa-lg"></i></a>
-           </li>
-        </ul>
-
-    </footer>
+    
 <script src="assets/js/script.js"></script> 
 <script src="https://kit.fontawesome.com/b75fe46682.js" crossorigin="anonymous"></script>
 </body>
