change icons and style restart button add shake to buttons

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
                 <span id="cpu_score"></span>
             </div>
             <div id="buttons">
-                <button id="rock">Rock <br> <i class="fa-regular fa-hand-back-fist" ></i> </button>
-                <button id="paper">Paper <br><i class="fa-regular fa-hand"></i></button>
-                <button id="scissors">Scissors <br><i class="fa-regular fa-hand-scissors"></i></button>
+                <button id="rock">  <i class="fa-solid fa-hand-back-fist" style="color: #00203fff;"></i></button>
+                <button id="paper"> <i class="fa-solid fa-hand" style="color: #00203fff;"></i></button>
+                <button id="scissors"> <i class="fa-solid fa-hand-scissors" style="color: #00203fff;"></i></button>
             </div>
             <div id="restart">
-                <button>play Again?</button>
+                <button>Play Again?</button>
             </div>
             
         </div>
