change header font size and position

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <span id="cpu_score"></span>
             </div>
             <div id="buttons">
-                <button id="rock">  <i class="fa-solid fa-hand-back-fist" style="color: #00203fff;"></i></button>
-                <button id="paper"> <i class="fa-solid fa-hand" style="color: #00203fff;"></i></button>
-                <button id="scissors"> <i class="fa-solid fa-hand-scissors" style="color: #00203fff;"></i></button>
+                <button id="rock" aria-label="choose rock">  <i class="fa-solid fa-hand-back-fist" style="color: #00203fff;"></i></button>
+                <button id="paper" aria-label="choose paper"> <i class="fa-solid fa-hand" style="color: #00203fff;"></i></button>
+                <button id="scissors" aria-label="choose scissors"> <i class="fa-solid fa-hand-scissors" style="color: #00203fff;"></i></button>
             </div>
             <div id="restart">
                 <button>Play Again?</button>
