add score section and fix style for small screens

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <div id="cpu_choice"></div>
             </div>
             <div id="scores">
-                <span id="player_score"></span>
-                <span id="cpu_score"></span>
+                <span id="player_score"> Player Score  0  : </span>
+                <span id="cpu_score">  0  Computer Score</span>
             </div>
             <div id="buttons">
                 <button id="rock" aria-label="choose rock">  <i class="fa-solid fa-hand-back-fist" style="color: #00203fff;"></i></button>
