--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     style="color: #00203fff;"></i></button>
         </div>
         <div id="restart">
-            <button>Play Again?</button>
+            <button id="restart_button">Play Again?</button>
         </div>
 
     </div>
