add style to display last selection

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
 
         <div id="results">
 
-            <div id="player_choice" class="last_pick"></div>
+            <div id="player_choice" class="last_pick"><i class="fa-solid fa-hand"
+                style="color: #00203fff;"></i></div>
 
-            <div id="cpu_choice" class="last_pick"></div>
+            <div id="cpu_choice" class="last_pick"><i class="fa-solid fa-hand-back-fist"
+                style="color: #00203fff;"></i></div>
         </div>
         <div id="scores">
             <span id="player_score"> Player Score 0 : </span>
