add message box to display result of last turn and hide restart button until game is complete

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <div id="cpu_choice" class="last_pick"><i class="fa-solid fa-hand-back-fist"
                 style="color: #00203fff;"></i></div>
         </div>
+        <div id="message"><p>Rock Beats Scissors Beats Paper Beats Rock </p> </div>
+        <br>
         <div id="scores">
             <span id="player_score"> Player Score 0 : </span>
             <span id="cpu_score"> 0 Computer Score</span>
