remove spaces between code lines and indent

--- a/index.html
+++ b/index.html
@@ -16,34 +16,33 @@
     </header>
 
     <div id="game_container">
-
-
         <div id="results">
-
-            <div id="player_choice" class="last_pick"><i class="fa-solid fa-hand"
-                style="color: #00203fff;"></i></div>
-
-            <div id="cpu_choice" class="last_pick"><i class="fa-solid fa-hand-back-fist"
-                style="color: #00203fff;"></i></div>
+            <div id="player_choice" class="last_pick"><i class="fa-solid fa-hand" style="color: #00203fff;"></i></div>
+            <div id="cpu_choice" class="last_pick"><i class="fa-solid fa-hand-back-fist" style="color: #00203fff;"></i>
+            </div>
         </div>
-        <div id="message"><p>Rock Beats Scissors Beats Paper Beats Rock </p> </div>
+        <div id="message">
+            <p>Rock Beats Scissors Beats Paper Beats Rock </p>
+        </div>
         <br>
         <div id="scores">
             <span id="player_score"> Player Score 0 : </span>
             <span id="cpu_score"> 0 Computer Score</span>
         </div>
         <div id="buttons">
-            <button id="rock" class="hand" aria-label="choose rock" > <i class="fa-solid fa-hand-back-fist"
-                    style="color: #00203fff;"></i></button>
+            <button id="rock" class="hand" aria-label="choose rock"> <i class="fa-solid fa-hand-back-fist"
+                    style="color: #00203fff;"></i>
+            </button>
             <button id="paper" class="hand" aria-label="choose paper"> <i class="fa-solid fa-hand"
-                    style="color: #00203fff;"></i></button>
+                    style="color: #00203fff;"></i>
+            </button>
             <button id="scissors" class="hand" aria-label="choose scissors"> <i class="fa-solid fa-hand-scissors"
-                    style="color: #00203fff;"></i></button>
+                    style="color: #00203fff;"></i>
+            </button>
         </div>
         <div id="restart">
             <button id="restart_button">Play Again?</button>
         </div>
-
     </div>
     <script src="assets/js/script.js"></script>
     <script src="https://kit.fontawesome.com/b75fe46682.js" crossorigin="anonymous"></script>
