--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
             <span id="player_score"> Player Score 0 : </span>
             <span id="cpu_score"> 0 Computer Score</span>
         </div>
+        <span id="choose">
+            <h2>Choose Rock Paper or scissors</h2>
+        </span>
         <div id="buttons">
+
             <button id="rock" class="hand" aria-label="choose rock"> <i class="fa-solid fa-hand-back-fist"
                     style="color: #00203fff;"></i>
             </button>
