style scoreboard so scores appear in middle

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <p>Rock Beats Scissors Beats Paper Beats Rock </p>
         </div>
         <div id="scores">
-            <span id="player_score"> Player Score 0 : </span>
-            <span id="cpu_score"> 0 Computer Score</span>
+            <span id="player_score" class="score"> Player Score 0 : </span>
+            <span id="cpu_score" class="score"> 0 Computer Score</span>
         </div>
        
         
