remove empty lines and tidy up js

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div id="game_container">
        
        <div id="results">
-            <div id="player_choice" class="last_pick">Your Pick</div>
-            <div id="cpu_choice" class="last_pick"> Computer pick
+            <div id="player_choice" class="last_pick"><p>Your Pick</p></div>
+            <div id="cpu_choice" class="last_pick"> <p>Computer Pick</p>
             </div>
         </div>
         <div id="message">
