--- a/index.html
+++ b/index.html
@@ -16,10 +16,13 @@
     </header>
 
     <div id="game_container">
-       
-       <div id="results">
-            <div id="player_choice" class="last_pick"><p>Your Pick</p></div>
-            <div id="cpu_choice" class="last_pick"> <p>Computer Pick</p>
+
+        <div id="results">
+            <div id="player_choice" class="last_pick">
+                <p>Your Pick</p>
+            </div>
+            <div id="cpu_choice" class="last_pick">
+                <p>Computer Pick</p>
             </div>
         </div>
         <div id="message">
@@ -29,7 +32,7 @@
             <span id="player_score" class="score"> Player Score 0 : </span>
             <span id="cpu_score" class="score"> 0 Computer Score</span>
         </div>
-       <div id="buttons">
+        <div id="buttons">
 
             <button id="rock" class="hand" aria-label="choose rock"> <i class="fa-solid fa-hand-back-fist"
                     style="color: #00203fff;"></i>
@@ -44,7 +47,7 @@
         <span id="choose">
             <h2>Choose Rock Paper or scissors</h2>
         </span>
-        
+
         <div id="restart">
             <button id="restart_button">Play Again?</button>
         </div>
