--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </div>
         <!--scoreboard leeps track of player and compuetr score until either  reaches 5-->
         <div id="scores">
-            <span id="player_score" class="score"> Player Score 0 : </span>
-            <span id="cpu_score" class="score"> 0 Computer Score</span>
+            <span id="player_score" class="score"> Player Score 0  </span>
+            <span id="cpu_score" class="score">  Computer Score 0</span>
         </div>
         <!--the choice buttons Rock paper scissors-->
         <div id="buttons">
