rename all id and class replace underscpre with dash

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             <i class="fa-regular fa-hand"></i> <i class="fa-regular fa-hand-scissors"></i></h1>
     </header>
 
-    <div id="game_container">
+    <div id="game-container">
         <!--section to display the previous pick of the user and the computer-->
         <div id="results">
-            <div id="player_choice" class="last_pick">
+            <div id="player-choice" class="last-pick">
                 <p>Your Pick</p>
             </div>
-            <div id="cpu_choice" class="last_pick">
+            <div id="cpu-choice" class="last-pick">
                 <p>Computer Pick</p>
             </div>
         </div>
@@ -35,8 +35,8 @@
         </div>
         <!--scoreboard leeps track of player and compuetr score until either  reaches 5-->
         <div id="scores">
-            <span id="player_score" class="score"> Player Score 0  </span>
-            <span id="cpu_score" class="score">  Computer Score 0</span>
+            <span id="player-score" class="score"> Player Score 0  </span>
+            <span id="cpu-score" class="score">  Computer Score 0</span>
         </div>
         <!--the choice buttons Rock paper scissors-->
         <div id="buttons">
@@ -57,7 +57,7 @@
         </span>
         <!--restart button resets the game -->
         <div id="restart">
-            <button id="restart_button">Play Again?</button>
+            <button id="restart-button">Play Again?</button>
         </div>
     </div>
     <script src="assets/js/script.js"></script>
