--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="play rock paper scissors against the computer">
-    <meta name="theme-color" content="#adefd1ff"/>
+    <meta name="theme-color" content="#adefd1ff">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Rock Paper Scissors</title>
-    <link href="/assets/favicon/favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="/assets/favicon/favicon.ico" rel="icon" type="image/x-icon">
 </head>
 
 <body>
@@ -53,7 +53,7 @@
         </div>
         <!--Simple instructions to choose from one of the choices-->
         <span id="choose">
-            <h2>Choose Rock Paper or scissors</h2>
+            <p>Choose Rock Paper or scissors</p>
         </span>
         <!--restart button resets the game -->
         <div id="restart">
