--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             </button>
         </div>
         <!--Simple instructions to choose from one of the choices-->
-        <span id="choose">
+        <div id="choose">
             <p>Choose Rock Paper or scissors</p>
-        </span>
+        </div>
         <!--restart button resets the game -->
         <div id="restart">
             <button id="restart-button">Play Again?</button>
