style scoreboard dotted border and font

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         </div>
         <!--scoreboard leeps track of player and compuetr score until either  reaches 5-->
         <div id="scores">
-            <span id="player-score" class="score"> Player Score 0 </span>
-            <span id="cpu-score" class="score"> Computer Score 0</span>
+            <span id="player-score" class="score"> Player Score: 0  </span>
+            <span id="cpu-score" class="score"> Computer Score: 0</span>
         </div>
         <!--the choice buttons Rock paper scissors-->
         <div id="buttons">
