style header size small screen

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <!--scoreboard leeps track of player and compuetr score until either  reaches 5-->
         <div id="scores">
            
-            <span id="player-score" class="score"> First to 5 Wins</span>
-            <span id="cpu-score" class="score"> First to 5 wins</span>
+            <span id="player-score" class="score"> Player Score 0</span>
+            <span id="cpu-score" class="score"> omputer Score 0</span>
         </div>
         <!--the choice buttons Rock paper scissors-->
         <div id="buttons">
