--- a/instructions.html
+++ b/instructions.html
@@ -13,7 +13,23 @@
 </head>
 
 <body>
-    
+  <header class="header">
+    <h1>Rock Paper Scissors! </h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Game</a></li>
+        <li><a href="instructions.html">Instructions</a></li>
+      </ul>
+    </nav>
+  </header>
+  <h2>Instructions</h2>
+  <ul>
+    <li>Rock Beats Scissors </li>
+    <li>Scissors Beats Paper</li>
+    <li>Paper Beats Rock</li>
+    <li>First to 5 Wins</li>
+    <li>Click any of the Buttons to make your choice and start the game</li>
+  </ul>
     <script src="assets/js/script.js"></script>
     <script src="https://kit.fontawesome.com/b75fe46682.js" crossorigin="anonymous"></script>
 </body>
