consolidate win and lose message function into single function

--- a/index.html
+++ b/index.html
@@ -41,15 +41,13 @@
         <!--the choice buttons Rock paper scissors-->
         <div id="buttons">
 
-            <button id="rock" class="hand" aria-label="choose rock"> <i class="fa-solid fa-hand-back-fist"
-                    style="color: #00203fff;"></i>
+            <button id="rock" class="hand" aria-label="choose rock" data-choice="rock"> <i class="fa-solid fa-hand-back-fist"></i>
             </button>
-            <button id="paper" class="hand" aria-label="choose paper"> <i class="fa-solid fa-hand"
-                    style="color: #00203fff;"></i>
+            <button id="paper" class="hand" aria-label="choose paper" data-choice="paper"> <i class="fa-solid fa-hand"></i>
             </button>
-            <button id="scissors" class="hand" aria-label="choose scissors"> <i class="fa-solid fa-hand-scissors"
-                    style="color: #00203fff;"></i>
+            <button id="scissors" class="hand" aria-label="choose scissors" data-choice="scissors"> <i class="fa-solid fa-hand-scissors"></i>
             </button>
+        </div>
         </div>
         <!--Simple instructions to choose from one of the choices-->
         <div id="choose">
