style font letter spacing and font size on mobile devices

--- a/index.html
+++ b/index.html
@@ -30,13 +30,14 @@
         </div>
         <!--message section displays random message after each round-->
         <div id="message">
-            <p>Rock Beats Scissors Beats Paper Beats Rock </p>
+            <p>Rock Beats Scissors Beats Paper Beats Rock.</p> 
+            <p> First to 5 Wins</p>
         </div>
         <!--scoreboard leeps track of player and compuetr score until either  reaches 5-->
         <div id="scores">
            
             <span id="player-score" class="score"> Player Score 0</span>
-            <span id="cpu-score" class="score"> omputer Score 0</span>
+            <span id="cpu-score" class="score"> Computer Score 0</span>
         </div>
         <!--the choice buttons Rock paper scissors-->
         <div id="buttons">
