style button size fotr mobile decvice make smaller and smaller border

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <!--restart button resets the game -->
         <div id="restart">
-            <button id="restart-button">Play Again?</button>
+            <button id="restart-button">Play Again!</button>
         </div>
     <script src="assets/js/script.js"></script>
     <script src="https://kit.fontawesome.com/b75fe46682.js" crossorigin="anonymous"></script>
